[package]
name = "yr-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
